--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,16 @@ spring:
 jwt:
   secret: mysecret.sjb_2023_.qwer1234.Dkagh1234! # 길어야 함
   token.expired-time-ms: 2592000000 # 30 days
+# Spring Boot 로깅 설정
+logging:
+  level:
+    org.springframework.web.socket: DEBUG  # WebSocket 로그 레벨 설정
+  file:
+    name: websocket.log  # 로그 파일 이름
+    path: /var/log/my-application/  # 로그 파일 경로
 
+# WebSocket 로깅을 위한 Logback 패턴 설정
+logging.pattern.console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+logging.pattern.file: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
 
